--- a/01-gsap/css/style.css
+++ b/01-gsap/css/style.css
@@ -1,1 +1,40 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  background-color: black;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+
+body > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+@media screen and (max-width: 400px) {
+  body > div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+body > div > span {
+  padding: 15px;
+  display: block;
+}
+
+svg {
+  width: 50px;
+  height: auto;
+}
+
+svg path {
+  fill: #84ff74;
+}
+/*# sourceMappingURL=style.css.map */
